Revision history for Schedule::Activity

0.2.2 - 2025-??-??
	- Annotation attributes during merge
	- Support attribute reporting from general activity lists

0.2.1 - 2025-11-16
	- Incremental schedule construction
	- Improved script for --help and --man
	- Fixed average value recalculation when dt==0

0.2.0 - 2025-11-08
	- Schedule::Activity only provides the object interface
	- Tutorial added
	- References to named messages are checked

0.1.9 - 2025-11-01
	- Attributes are no longer "fixed" at activity boundaries, only at the start/end of schedule.
	- Tension algorithm uses mathematically-proven distribution.
	- schedule-activity.pl supports annotations
	- buildSchedule deprecation warning.

0.1.8 - 2025-10-24
	- schedule-activity.pl
	- Tension for slack/buffer can be set during schedule construction
	- Add support for 'unsafe' flag (enabled by default in this version)

0.1.7 - 2025-10-21
	- Schedule::Activity uses object interface
	- Tension settings for slack/buffer (undocumented)
	- Fix bug, scheduling to maximum buffer

0.1.6 - 2025-10-18
	- Node filtering
	- Attributes rolling average, fix dump/restore/reset

0.1.5 - 2025-10-15
	- Attributes use rolling averages
	- Attributes don't support historic update

0.1.4 - 2025-10-14
	- Attribute prevent value update from historic changes

0.1.3 - 2025-10-12
	- Attribute precedence

0.1.2 - 2025-10-11
	- Fixed attribute discovery within message configurations
	- Named messages

0.1.1 - 2025-10-08
	- Annotations are built and reported separately from buildSchedule
	- Attributes for activity/action nodes, reported via buildSchedule
	- Messages support strings, arrays, hashes
	- Message attributes
	- Set missing time values with a 3,4,5 ratio
	- Add samples

0.1.0 - 2025-09-28
	- Core functionality
